<resources>
    <string name="app_name">ConsumoCombustivel</string>
    <string name="autor">JOÃO VITOR LIMA COSTA - RA: 1110482313015</string>

    <string name="consumo">Quantos quilômetros o carro faz com 1 litro de combustível?</string>
    <string name="tanque">Insira o volume de combustível no tanque</string>
    <string name="calc">Calcular</string>
    <string name="iniComb">insira o total</string>
    <string name="capac">insira a quilometragem</string>
    <string name="resultado">Com essa quantidade é possível percorrer </string>

</resources>